src/objects/BGBK__Payment_Collection_Type_Tier__mdt.object
<CustomObject>
    <fields>
        <fullName>BGBK__Extra_Where_Clause__c</fullName>
        <description>Specify any additional filter criteria in SOQL syntax to further refine results of this tier&apos;s query</description>
        <inlineHelpText>Specify any additional filter criteria in SOQL syntax to further refine results of this tier&apos;s query</inlineHelpText>
        <label>System Default Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BGBK__Fieldset_API_Name__c</fullName>
        <description>API name of the fieldset for the object in this tier</description>
        <inlineHelpText>Specify the Fieldset API name for the object in this tier. If left empty queries for name and search field only.</inlineHelpText>
        <label>Fieldset API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Limit__c</fullName>
        <description>Query results limit for this tier</description>
        <inlineHelpText>Specify the limit that needs to be applied to the query results number for the tier. Blank is an option. Maximum is 200.</inlineHelpText>
        <label>Limit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGBK__Object_API_Name__c</fullName>
        <description>API Name of the object that should be queried for in this tier.</description>
        <inlineHelpText>Specify the Object API name that should be queried for in this tier</inlineHelpText>
        <label>Object API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Order_By__c</fullName>
        <description>Specify the Field API names to order tier results</description>
        <inlineHelpText>Specify the Field API names to order tier results. Comma delimit if more than one.</inlineHelpText>
        <label>Order By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Payment_Collection_Type__c</fullName>
        <description>Defines which Payment Collection Type this tier is related to</description>
        <inlineHelpText>Specify the Payment Collection Type setting name to which this tier should relate to</inlineHelpText>
        <label>Payment Collection Type</label>
        <referenceTo>BGBK__Payment_Collection_Types__mdt</referenceTo>
        <relationshipLabel>Payment Collection Type Tiers</relationshipLabel>
        <relationshipName>Payment_Collection_Type_Tiers</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>BGBK__Search_Field_API_Name__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <description>Specify the Field API Name to search by</description>
        <inlineHelpText>Specify the Field API Name to search by</inlineHelpText>
        <label>Search Field API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Sort_Order__c</fullName>
        <description>Sort Order of tier search results.</description>
        <inlineHelpText>Sort Order of tier search results. Enter only ASC or DESC</inlineHelpText>
        <label>Sort Order</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Tier_Index__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Specify the tier index to set what tier should be first and/or second before selecting the fee, deposit or invoice.</description>
        <inlineHelpText>Specify the tier index to set what tier should be first and/or second before selecting the fee, deposit or invoice.</inlineHelpText>
        <label>Tier Index</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Collection Type Tier</label>
    <pluralLabel>Payment Collection Type Tiers</pluralLabel>
</CustomObject>